templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kaywin.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
